syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hikarilan.nerabbs.lib.services.search.grpc";
option java_outer_classname = "SearchServiceProto";

package search_service;
import "google/protobuf/empty.proto";

service Search {
  rpc AddDocuments(AddDocumentsRequest) returns (google.protobuf.Empty);
  rpc DeleteDocuments(DeleteDocumentsRequest) returns (google.protobuf.Empty);
  rpc SearchDocument(SearchDocumentRequest) returns (SearchDocumentResponse);
}

message AddDocumentsRequest {
  string index = 1;
  repeated string document = 2;
  optional string primaryKey = 3;
}

message DeleteDocumentsRequest {
  string index = 1;
  repeated string primaryKey = 2;
}

message SearchDocumentRequest {
  string index = 1;
  string query = 2;
  optional int32 offset = 3;
  optional int32 limit = 4;
}

message SearchDocumentResponse {
  repeated string hits = 1;
}